--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,11 +1,11 @@
 name: build-go-binary
 
 on:
-#  push:
-#    branches:
-#      - main
-  release:
-    types: [created] # 表示在创建新的 Release 时触发
+  push:
+    branches:
+      - main
+#  release:
+#    types: [created] # 表示在创建新的 Release 时触发
 
 jobs:
   build-go-binary:
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: wangyoucao577/go-release-action@v1.30
         with:
-          github_token: ${{ secrets.ssh }} # 一个默认的变量，用来实现往 Release 中添加文件
+          github_token: ${{ secrets.SSH }} # 一个默认的变量，用来实现往 Release 中添加文件
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
           goversion: 1.18 # 可以指定编译使用的 Golang 版本
