--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -3,7 +3,7 @@ name: build-go-binary
 on:
   push:
     branches:
-      - main
+      - master
 #  release:
 #    types: [created] # 表示在创建新的 Release 时触发
 
