--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -19,11 +19,11 @@ jobs:
             goos: windows
     steps:
       - uses: actions/checkout@v3
-      - uses: wangyoucao577/go-release-action@v1.30
+      - uses: wangyoucao577/go-release-action@latest
         with:
           github_token: ${{ secrets.SSH }} # 一个默认的变量，用来实现往 Release 中添加文件
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
           goversion: 1.18 # 可以指定编译使用的 Golang 版本
-          binary_name: "chatgpt-dingtalk" # 可以指定二进制文件的名称
+          binary_name: "xsec-ssh-firewall" # 可以指定二进制文件的名称
           extra_files: conf/app.yaml # 需要包含的额外文件
