--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -18,8 +18,8 @@ jobs:
           - goarch: arm64
             goos: windows
     steps:
-      - uses: actions/checkout@v1.36
-      - uses: wangyoucao577/go-release-action@latest
+      - uses: actions/checkout@v3
+      - uses: wangyoucao577/go-release-action@v1.36
         with:
           github_token: ${{ secrets.SSH }} # 一个默认的变量，用来实现往 Release 中添加文件
           goos: ${{ matrix.goos }}
