--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,11 +1,12 @@
 name: build-go-binary
 
+#on:
+#  push:
+#    branches:
+#      - master
 on:
-  push:
-    branches:
-      - master
-#  release:
-#    types: [created] # 表示在创建新的 Release 时触发
+  release:
+    types: [created] # 表示在创建新的 Release 时触发
 
 jobs:
   build-go-binary:
