--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,4 @@
-name: build-go-binary
+name: xsec-ssh-firewall
 
 #on:
 #  push:
@@ -27,5 +27,5 @@ jobs:
           goarch: ${{ matrix.goarch }}
           goversion: 1.18 # 可以指定编译使用的 Golang 版本
           binary_name: "xsec-ssh-firewall" # 可以指定二进制文件的名称
-          extra_files: conf/app.yaml # 需要包含的额外文件
+          extra_files: config.yaml # 需要包含的额外文件
 
